# fizzbuzz

haskell/: fizzbuzz.cabal
haskell/src/main/: Main.hs
