name:                fizzbuzz
version:             0.1.0
synopsis:            FizzBuzz problem solution
description:
  A program that prints the numbers from 1 to 100.
  However, for multiples of three it prints “Fizz” instead of the number,
  and for the multiples of five it prints “Buzz”. For numbers which are
  multiples of both three and five it prints “FizzBuzz”.
license:             AGPL-3
author:              Adam Russell
maintainer:          adamlr6+pub@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable fizzbuzz
  main-is:             Main.hs
  hs-source-dirs:      src/main
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
